load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "data",
    srcs = ["data.go"],
    importpath = "github.com/Lev1ty/lmsysmd/pb/lmsysmd/load/data/v1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_connectrpc_connect//:connect",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
